<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF7ED"
    tools:context=".Login">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="249dp"
        android:layout_height="208dp"
        android:layout_marginTop="8dp"
        android:background="#FFF7ED"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_home"
        app:srcCompat="@drawable/main_logo" />

    <TextView
        android:id="@+id/textView_home"
        android:layout_width="332dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/textView_home"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmail"
        android:layout_width="245dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/login_txvEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextClave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextTextClave"
        android:layout_width="244dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/login_txvPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmail" />

    <TextView
        android:id="@+id/link_restablecerClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:linksClickable="true"
        android:text="Restablecer contraseña"
        android:textAllCaps="false"
        android:textColor="@color/purple_700"
        android:textColorLink="@color/purple_700"
        app:layout_constraintBottom_toTopOf="@+id/login_btningresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextClave" />

    <Button
        android:id="@+id/login_btningresar"
        android:layout_width="188dp"
        android:layout_height="59dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="#13A699"
        android:capitalize="none"
        android:text="@string/btn_ingresar_login"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextClave" />

    <Button
        android:id="@+id/btn_registrarse_registrarUsuario"
        android:layout_width="169dp"
        android:layout_height="58dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#13A699"
        android:text="@string/btn_registrarse_login"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btningresar" />
</androidx.constraintlayout.widget.ConstraintLayout>