<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF7ED"
    tools:context=".Login">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/sitios_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/COLOR_4"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="nombre del usuario"
        app:titleTextColor="@color/COLOR_1" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sitios_toolbar">

        <EditText
            android:id="@+id/sitios_txtbusqueda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/hintbuscar"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/sitios_btnbuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/btnbuscar" />
    </LinearLayout>

    <TextView
        android:id="@+id/sitios_txvsitios"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:text="@string/main_menu_opcion1"
        android:textAlignment="textStart"
        android:textColor="#13A699"
        android:textSize="34sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sitios_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sitios_txvsitios" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/sitios_btnagregarmapa"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/sitios_txvsitios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toStartOf="@+id/sitios_txvsitios"
        app:layout_constraintTop_toTopOf="@+id/sitios_txvsitios"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/mapas" />


</androidx.constraintlayout.widget.ConstraintLayout>